<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout">


 <androidx.coordinatorlayout.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:backgroundTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:contentDescription="@string/cart_btn"
                android:id="@+id/cart_btn"
                android:layout_marginStart="160dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_cart_black_24dp"/>
        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/search_for_books"
                android:textColor="@android:color/black"
                android:textAllCaps="false"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorWhite"
                android:drawableLeft="@drawable/search"
                android:textSize="16sp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genre_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout

        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/top_picks"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_picks"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_product_recycler"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</LinearLayout>






 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 <com.google.android.material.navigation.NavigationView
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     app:menu="@menu/nav_menu"
     app:headerLayout="@layout/nav_bar_footer"
     android:id="@+id/nav_view"
     android:layout_gravity="start" />


</androidx.drawerlayout.widget.DrawerLayout>